# dji-tello-collision-avoidance-pydnet

./: .editorconfig  .flake8  .pre-commit-config.yaml  CITATION.bib  CITATION.cff  LICENSE  Makefile  README.md  make-3d-testing.py  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup.py  telloCV.py  tello_demo.py  tello_pydnet_interface.py  webcam_demo.py
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: __init__.py  camera_interface.py  collision_avoidance.py  config.py  convert_weights.py  depth_estimator.py  tello_source.py  utils.py  webcam_source.py
tests/: __init__.py  test_collision_avoidance.py  test_depth_estimator.py  test_tello_interface.py  test_utils.py  test_webcam_demo.py
